# agent-test-harness

./: .gitignore  Dockerfile  README.md  agent_test_harness.py  example_config.json  example_config.yaml  kwaak.toml  organize_results.sh  pyproject.toml  report_results.sh  run_example.sh  run_fluyt_dependencies.sh  upload_results.sh
agent_test_harness/: agent_test_benchmark.py  agent_test_harness.py  benchmark.py  llm_proxy.py  report_results.py  workspace_provider.py
agent_test_harness/templates/agents/: fluyt.yaml  kwaak.yaml  qodo-cover.yaml
agent_test_harness/templates/repositories/: cody.yaml  todolist.yaml  tokei.yaml
agents/fluyt/: manifest-rs.yaml  manifest-ts.yaml
src/agent_test_harness/: agent_test_benchmark.py  agent_test_harness.py  benchmark.py  benchmark_config.py  cli.py  events.py  main.py  report_results.py  swe_bench.py  swe_bench_types.py  test_repository.py  test_validation.py  workspace_provider.py
src/agent_test_harness/templates/agents/: fluyt.yaml  kwaak.yaml  qodo-cover.yaml
src/agent_test_harness/templates/repositories/: cody.yaml  derrick.yaml  gpt-migrate.yaml  llama-stack.yaml  ripgrep.yaml  todolist.yaml  tokei.yaml
src/agent_test_harness/templates/repositories/swe-bench/: README.md  astroid_2.16.yaml  astroid_3.0.yaml  astropy_1.1.yaml  astropy_3.0.yaml  astropy_3.1.yaml  astropy_4.1.yaml  astropy_v5.3.yaml  dbt-core_1.6.yaml  django_1.4.yaml  django_1.5.yaml  django_1.8.yaml  django_1.9.yaml  django_3.0.yaml  django_3.1.yaml  django_4.0.yaml  (+71 more)
tests/: test_benchmark_config.py  test_cli.py  test_smoke.py  test_validation.py
